--- a/templates/home/patient_list.html
+++ b/templates/home/patient_list.html
@@ -14,7 +14,7 @@
                 <div class="card card-plain">
                     <div class="card-header card-header-primary">
                         <h4 class="card-title mt-0">Lista de pacientes</h4>
-                        <p class="card-category">Orden por nombre</p>
+                        <p class="card-category">Orden por última actualización</p>
                     </div>
                     <div class="card-body patient-list-container">
                         <div class="table-responsive">
