--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -3,7 +3,7 @@
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Administración</a>
+            <a class="navbar-brand" href={% url 'home:patients' %}>Logo pequeño</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
@@ -57,8 +57,8 @@
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                  <a class="dropdown-item" href="/page-user.html">Perfil</a>
-                  <div class="dropdown-divider"></div>
+                  {% comment %} <a class="dropdown-item" href="/page-user.html">Perfil</a>
+                  <div class="dropdown-divider"></div> {% endcomment %}
                   <a class="dropdown-item" href="{% url 'authentication:logout' %}" >Cerrar sesión</a>
                 </div>
               </li>
