Before replacing words

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -84,6 +84,11 @@ button.secondary {
     color: white;
 }
 
+button.secondary:hover {
+    background-color: rgb(151, 190, 202);
+    color: white;
+}
+
 button.primary {
     background-color: #0d6efd;
     color: white;
@@ -92,6 +97,12 @@ button.primary {
 button.success {
     background-color: rgb(90, 69, 182);
     color: white;
+}
+
+.delete-button {
+    position: absolute;
+    bottom: 0;
+    left: 14px;
 }
 
 .form-field {
