--- a/templates/home/form.html
+++ b/templates/home/form.html
@@ -28,7 +28,7 @@
                 <button class="nav-link" id="pills-clinica-tab" data-bs-toggle="pill" data-bs-target="#pills-clinica" type="button" role="tab" aria-controls="pills-clinica" aria-selected="false">Historia clínica</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-diagnostico-tab" data-bs-toggle="pill" data-bs-target="#pills-diagnostico" type="button" role="tab" aria-controls="pills-diagnostico" aria-selected="false">Diagnóstico</button>
+                <button class="nav-link" id="pills-diagnosiso-tab" data-bs-toggle="pill" data-bs-target="#pills-diagnosiso" type="button" role="tab" aria-controls="pills-diagnosiso" aria-selected="false">Diagnóstico</button>
               </li>
               <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-evolucion-tab" data-bs-toggle="pill" data-bs-target="#pills-evolucion" type="button" role="tab" aria-controls="pills-evolucion" aria-selected="false">Evolución</button>
@@ -232,11 +232,11 @@
                 </div>
 
               </div>
-              <div class="tab-pane fade" id="pills-diagnostico" role="tabpanel" aria-labelledby="pills-diagnostico-tab" tabindex="0">
+              <div class="tab-pane fade" id="pills-diagnosiso" role="tabpanel" aria-labelledby="pills-diagnosiso-tab" tabindex="0">
 
                 <div class="form-section-container">
 
-                  <div id="diagnostic-home-page">
+                  <div id="diagnosis-home-page">
                     
                     <div class="row">
 
@@ -246,20 +246,20 @@
                       <div class="col-md-8">
                         <div class="row">
                           <div class="col-md-12">
-                            <label for={{ patient_form.diagnostico.id_for_label }}>{{ patient_form.diagnostico.label }}</label>
+                            <label for={{ patient_form.diagnosiso.id_for_label }}>{{ patient_form.diagnosiso.label }}</label>
                             <div class="d-none">
-                              {{ patient_form.diagnostico }}
+                              {{ patient_form.diagnosiso }}
                             </div>
                             {% comment %} <button id="test-button">Test</button> {% endcomment %}
-                            {% comment %} <input type="hidden" name="diagnostico" id="id_diagnostico"> {% endcomment %}
+                            {% comment %} <input type="hidden" name="diagnosiso" id="id_diagnosiso"> {% endcomment %}
                           </div>
                         </div>
                         
                         <div class="row">
 
                           <div class="col-md-10 col-sm-10 col-9">
-                            <div class="select-diagnostic">
-                              <button id="diagnostic-select">
+                            <div class="select-diagnosis">
+                              <button id="diagnosis-select">
                                 <div>Seleccionar</div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="15.6" height="15.6" viewBox="0 0 24 24">
                                   <path d="M12 17.414L3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z"/>
@@ -269,7 +269,7 @@
                           </div>
     
                           <div class="col-md-2 col-sm-2 col-3 d-flex align-items-center justify-content-center9">
-                            <button id="diagnostic-form-displayer" class="plus-button">
+                            <button id="diagnosis-form-displayer" class="plus-button">
                               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="rgb(255, 255, 255)">
                                 <path d="M19 11H13V5a1 1 0 0 0-2 0v6H5a1 1 0 0 0 0 2h6v6a1 1 0 0 0 2 0v-6h6a1 1 0 0 0 0-2z"/>
                               </svg>
@@ -308,7 +308,7 @@
 
                   </div>
 
-                  <div id="diagnostic-form-page" class="d-none">
+                  <div id="diagnosis-form-page" class="d-none">
 
                     <div class="card fetch-form">
 
@@ -323,15 +323,15 @@
                       
                           <div class="col-md-3">
                             <div class="form-field">
-                              <label for={{ diagnostic_form.diagnostic_code.id_for_label }}>{{ diagnostic_form.diagnostic_code.label }}</label>
-                              {{ diagnostic_form.diagnostic_code }}
+                              <label for={{ diagnosis_form.diagnosis_code.id_for_label }}>{{ diagnosis_form.diagnosis_code.label }}</label>
+                              {{ diagnosis_form.diagnosis_code }}
                             </div>
                           </div>
     
                           <div class="col-md-9">
                             <div class="form-field">
-                              <label for={{ diagnostic_form.diagnostic_description.id_for_label }}>{{ diagnostic_form.diagnostic_description.label }}</label>
-                              {{ diagnostic_form.diagnostic_description }}
+                              <label for={{ diagnosis_form.diagnosis_description.id_for_label }}>{{ diagnosis_form.diagnosis_description.label }}</label>
+                              {{ diagnosis_form.diagnosis_description }}
                             </div>
                           </div>
     
@@ -341,11 +341,11 @@
 
                           <div class="col-md-12 d-flex justify-content-center mt-4">
 
-                            <button id="diagnostic-form-hider" class="fetch-control-button secondary">
+                            <button id="diagnosis-form-hider" class="fetch-control-button secondary">
                               Cancelar
                             </button>
 
-                            <button id="diagnostic-form-submitter" class="fetch-control-button primary">
+                            <button id="diagnosis-form-submitter" class="fetch-control-button primary">
                               Guardar
                             </button>
 
@@ -651,34 +651,12 @@
       </div>
     </div>
   </div>
-
-
-  {% comment %} <div data-notify="container" class="col-11 col-md-4 alert alert-danger 
-  alert-with-icon animated fadeInDown" role="alert" data-notify-position="top-left" 
-  style="display: inline-block; margin: 15px auto; position: fixed; 
-  transition: all 0.5s ease-in-out 0s; z-index: 1031; top:20px; left: 20px;">
-    <button type="button" aria-hidden="true" class="close" data-notify="dismiss" 
-    style="position: absolute; right: 10px; top: 50%; margin-top: -9px; z-index: 1033;">
-      <i class="material-icons">close</i>
-    </button>
-    <i data-notify="icon" class="material-icons" >add_alert</i>
-    <span data-notify="title"></span>
-    <span data-notify="message">
-      Welcome to
-      <b>material dashboard pro</b>
-      alright
-    </span>
-    <a href="#" target="blank" data-notify="url"></a>
-  </div> {% endcomment %}
-
-  
-
-  
   
 {% endblock content %}
 
 {% block javascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <!-- Page specific JavaScript -->
+{{ js_variables|json_script:'js-variables' }}
 <script type="text/javascript" src={% static 'assets/js/form.js' %}></script>
 {% endblock javascripts %}
