--- a/templates/home/patient_list.html
+++ b/templates/home/patient_list.html
@@ -100,6 +100,9 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+
 <!-- Page specific JavaScript -->
+{{ js_variables|json_script:'js-variables' }}
 <script type="text/javascript" src={% static 'assets/js/patientList.js' %}></script>
+
 {% endblock javascripts %}
