--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -43,7 +43,7 @@
 
     <div class="main-panel">
 
-      {% include 'includes/navigation.html' %}
+      {% comment %} {% include 'includes/navigation.html' %} {% endcomment %}
 
       <!-- End Navbar -->
       <div class="content">
