--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,8 +5,8 @@
 <head>
 
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href={% static "/assets/img/apple-icon.png" %}>
-  <link rel="icon" type="image/png" href={% static "/assets/img/favicon.png" %}>
+  <link rel="apple-touch-icon" sizes="76x76" href={% static "/assets/img/PneumaLogo-2-favicon.png" %}>
+  <link rel="icon" type="image/png" href={% static "/assets/img/PneumaLogo-2-favicon.png" %}>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-material">
 
@@ -33,91 +33,73 @@
 </head>
 
 <body class="">
-  <div class="wrapper ">
+  <div class="wrapper d-flex justify-content-center align-items-center flex-column">
 
-    <!-- Messages -->
-    {% include 'includes/messages.html' %}
+    {% comment %} <div class="row">
+        <div class="col-md-5"> {% endcomment %}
 
-    <!-- Sidebar -->
-    {% comment %} {% include 'includes/sidebar.html' %} {% endcomment %}
+            <div class="authentication-logo">
+                <img src={% static 'assets/img/PneumaLogo-3.png' %} alt="">
+            </div>
 
-    <div class="main-panel">
+          <div class="card register-box">
+            <div class="card-header card-header-primary">
+              <h4 class="card-title">
+                Iniciar sesión
+              </h4>
+            </div>
+            <div class="card-body">
+    
+              <h6 class="card-category">
+                  {% if msg %}
+                    <span class="text-danger">{{ msg | safe }}</span>
+                  {% else %}
+                  {% endif %}  
+              </h6>
+              
+              <br />
+    
+              <form role="form" method="post" action="">
+                  
+                {% csrf_token %} 
 
-      {% comment %} {% include 'includes/navigation.html' %} {% endcomment %}
-
-      <!-- End Navbar -->
-      <div class="content">
-
-        
-
-        <div class="container-fluid">
-
-            <div class="row">
-                <div class="col-md-5">
-                  <div class="card">
-                    <div class="card-header card-header-primary">
-                      <h4 class="card-title">
-                        Iniciar sesión
-                      </h4>
-                    </div>
-                    <div class="card-body">
-            
-                      <h6 class="card-category">
-                          {% if msg %}
-                            <span class="text-danger">{{ msg | safe }}</span>
-                          {% else %}
-                          {% endif %}  
-                      </h6>
-                      
-                      <br />
-            
-                      <form role="form" method="post" action="">
-                          
-                        {% csrf_token %} 
-
-                        <div class="row">
-                          <div class="col-md-12">
-                            <div class="form-field">
-                              <label for={{ form.username.id_for_label }}>Nombre de usuario</label>
-                              {{ form.username }}
-                            </div>
-                          </div>
-                        </div>
-            
-                        <br />
-            
-                        <div class="row">
-                          <div class="col-md-12">
-                            <div class="form-field">
-                              <label for={{ form.password.id_for_label }}>Contraseña</label>                        
-                              {{ form.password }}
-                            </div>
-                          </div>
-                        </div>
-            
-                        <br />
-            
-                        <button type="submit" name="login" class="btn btn-primary pull-left">Login</button>
-            
-                        &nbsp; &nbsp; 
-                        {% comment %} <span class="pull-right">
-                          Don't have an account? <a href="{% url 'authentication:register' %}" class="text-primary">Create</a>
-                        </span> {% endcomment %}
-            
-                        <div class="clearfix"></div>
-            
-                      </form>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-field">
+                      <label for={{ form.username.id_for_label }}>Nombre de usuario</label>
+                      {{ form.username }}
                     </div>
                   </div>
                 </div>
+    
+                <br />
+    
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-field">
+                      <label for={{ form.password.id_for_label }}>Contraseña</label>                        
+                      {{ form.password }}
+                    </div>
+                  </div>
+                </div>
+    
+                <br />
+    
+                <button type="submit" name="login" class="btn btn-primary pull-left">Login</button>
+    
+                &nbsp; &nbsp; 
+                {% comment %} <span class="pull-right">
+                  Don't have an account? <a href="{% url 'authentication:register' %}" class="text-primary">Create</a>
+                </span> {% endcomment %}
+    
+                <div class="clearfix"></div>
+    
+              </form>
             </div>
+          </div>
+        {% comment %} </div>
+    </div> {% endcomment %}
 
-        </div>
-      </div>
-
-      {% comment %} {% include 'includes/footer.html' %} {% endcomment %}
-
-    </div>
   </div>
 
   {% comment %} {% include 'includes/fixed-plugin.html' %} {% endcomment %}
