--- a/templates/home/patient_list.html
+++ b/templates/home/patient_list.html
@@ -20,7 +20,7 @@
                         <div class="table-responsive">
 
                             <div class="tab-content" id="pills-tabContent">
-                                {% if object_list %}
+                                {% if list_length %}
                                 <table class="table table-hover mb-0">
                                     
                                     <template id="head-template">
@@ -84,14 +84,14 @@
         <div class="components d-none">
 
             <li class="page-item arrow-paginator previous">
-                <a class="page-link" href="#" aria-label="Previous">
+                <a class="page-link" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
             </li>
 
             <li class="page-item arrow-paginator next">
-                <a class="page-link" href="#" aria-label="Next">
+                <a class="page-link" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </a>
